<resources>
    <string name="app_name">Dequan\'s App Profolio</string>

    <string name="app_title">Dequan\'s App Profolio</string>
    <string name="action_settings">Settings</string>

    <!--Action App Button Titles-->
    <string name="popular_movies_button">Popular Movies</string>
    <string name="football_scores_button">Football Scores</string>
    <string name="library_app_button"> Library App</string>
    <string name="build_it_bigger_button">Built It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="my_own_app">My Own App</string>

</resources>
